============================== 0.2.40 ===========================

2008-09-03  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Release 0.2.40

	* NEWS: updated

2008-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* esdlib.c (write_timeout): Check for the existence of POLLERR or
	POLLHUP first. If either is set, abort the write(). We can't
	assume that POLLOUT won't be set if a hang-up occurred.
	(write_timeout): Abort on all write() errors other than EINTR.

2008-07-29  Jeffrey Stedfast  <fejj@novell.com>

	* audio_oss.c: #include <errno.h>. Fixes bug #543239

============================== 0.2.39 ===========================

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Release 0.2.39

	* NEWS: updated

	* esdlib.c Update all code to use new read/write/connect wrappers
	that abort if the operation takes too long and/or the other end
	drops the connection. Fixes bug #542391.
	(read_timeout): New function to abort a read() if it takes too
	long and/or if the other end drops the connection.
	(write_timeout): Same idea here.
	(connect_timeout): Same.

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* audio_alsa09.c: Suppress verbose error messages from ALSA. Patch
	by Stanislav Brabec to fix bug #528718.

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* util.c (esd_get_socket_dirname): Allow for multiple esd
	instances. Patch by Martin (Pitt?) from Ubuntu. Fixes bug #465067.

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* esd-config.in: Fix esound-config on multilib setups (bug
	#435652). Patch by Matthias Clasen <mclasen@redhat.com>.

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* esddsp.in (LD_PRELOAD): search for library by itself, so that
	both 32-bit and 64-bit programs work with a single esddsp
	script. Fixes bug #435651.

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* audio_oss.c (esd_audio_open): Don't report errors if /dev/dsp
	doesn't exist (Based on Havoc's patch).  Fixes bug #435649.
